@@ -7,12 +7,6 @@ matrix:
     - python: 3.7
       env: TOXENV=lint
     - python: 3.6
-      env: TOXENV=py36-django111
-    - python: 3.6
-      env: TOXENV=py36-django21
-    - python: 3.7
-      env: TOXENV=py37-django21
-    - python: 3.6
       env: TOXENV=py36-django22
     - python: 3.7
       env: TOXENV=py37-django22
