@@ -1,8 +1,6 @@
 [tox]
 envlist =
     lint
-    py36-django111
-    py{36,37}-django21
     py{36,37}-django22
     py{36,37,38}-django30
     py{38}-djangomain
@@ -10,8 +8,6 @@ envlist =
 [testenv]
 commands = {envpython} -Wa -b -m coverage run -m django test --settings=tests.settings
 deps =
-    django111: Django>=1.11,<2.0
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
     djangomain: https://github.com/django/django/archive/main.tar.gz
