@@ -2,6 +2,7 @@ Unreleased
 ==========
 
 - Dropped support for Python 3.5.
+- Dropped support for Django 1.11 and 2.1.
 
 0.9.3 - 2019-10-31
 ==================
